Launch Isle of Adventure: Complete point-and-click adventure game with website announcement
• Add complete Isle of Adventure game with Phaser.js framework
• Implement point-and-click adventure gameplay with rich storytelling
• Add interactive dialogue systems for all major character encounters
• Include immersive soundtrack with Creative Commons licensed music
• Add opening credits video and victory sequences with TitanBlade Games branding
• Implement auto-save system and seamless scene progression
• Add comprehensive website announcement section featuring new game
• Include game screenshots and embedded welcome video on main site
• Update TitanBlade Games branding throughout all content
• Fix button positioning and UI issues for optimal user experience

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,6 @@ jobs:
       run: |
         aws s3 sync . s3://battle-of-the-druids-web --delete --exclude ".git/*" --exclude ".github/*" --exclude "*.md" --exclude "requirements.txt" --exclude "main.py" --exclude "Battle*"
         
-    - name: Invalidate CloudFront cache
+    - name: Invalidate CloudFront cache (HTML files only)
       run: |
-        aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
+        aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} --paths "/index.html" "/battle-of-the-druids/index.html"
